--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -48,7 +48,7 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
 
-                        <app-team-card type="CD_2021"></app-team-card>
+                        <app-team-card type="CD_actual"></app-team-card>
 
                     </mat-expansion-panel>
 
@@ -60,8 +60,9 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
 
-                        <app-team-card type="Mediacom_2021"></app-team-card>
-                        <app-team-card type="Mediacom2_2021"></app-team-card>
+                        <app-team-card type="Mediacom_actual"></app-team-card>
+                        <app-team-card type="Mediacom2_actual"></app-team-card>
+                        <app-team-card type="Mediacom3_actual"></app-team-card>
                     </mat-expansion-panel>
 
                     <!-- IT -->
