--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -97,7 +97,8 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
 
-                        <app-team-card type="ID_2021"></app-team-card>
+                        <app-team-card type="ID_actual"></app-team-card>
+                        <app-team-card type="ID_actual_2"></app-team-card>
 
                     </mat-expansion-panel>
 
