--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -110,8 +110,8 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
 
-                        <app-team-card type="Fundraising_2021"></app-team-card>
-                        <app-team-card type="Fundraising2_2021"></app-team-card>
+                        <app-team-card type="Fundraising_actual"></app-team-card>
+                        <app-team-card type="Fundraising2_actual"></app-team-card>
 
                     </mat-expansion-panel>
 
