--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -85,8 +85,8 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
 
-                        <app-team-card type="Education_2021"></app-team-card>
-                        <app-team-card type="Education2_2021"></app-team-card>
+                        <app-team-card type="Education_actual"></app-team-card>
+                        <app-team-card type="Education2_actual"></app-team-card>
                     </mat-expansion-panel>
 
                     <!-- I+D -->
