--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -73,7 +73,8 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
 
-                        <app-team-card type="IT_2021"></app-team-card>
+                        <app-team-card type="IT_actual_1"></app-team-card>
+                        <app-team-card type="IT_actual_2"></app-team-card>
 
                     </mat-expansion-panel>
 
