--- a/src/app/modules/events/pages/events/events.component.html
+++ b/src/app/modules/events/pages/events/events.component.html
@@ -75,10 +75,55 @@
             </mat-card-content>
           </mat-card>
         </a>
+      </div>
+    </div>
+
+      <div class="card-group-row">
+
+        <div class="card-group-col">
+          <!--Bitcup-->
+          <a [routerLink]="['/error401']">
+            <mat-card class="event-card">
+              <div class="image-with-text">
+                <img mat-card-img src="https://i.ibb.co/q1QyW01/cursopython.jpg" alt="Foto de los cursos de Python" class="event-card-img cursopython-filter"/>
+                <p class="text-on-image bitcup-text">{{ 'HOME.BITCUP.TITLE' | translate }}</p>
+              </div>
+              <mat-card-content class="mt-2">
+                <mat-card-title>{{ 'HOME.BITCUP.TITLE' | translate }}</mat-card-title>
+                <p class="lead">{{ 'HOME.BITCUP.TEXT' | translate }}</p>
+                <a class="link-text" [routerLink]="['/error401']">
+                  <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+                    <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+                  </h5>
+                </a>
+              </mat-card-content>
+            </mat-card>
+          </a>
+
+        </div>
+        <div class="card-group-col">
+          <!--Curso de análisis de datos-->
+          <a  [routerLink]="['/data-analysis']">
+            <mat-card class="event-card">
+              <div class="image-with-text">
+                <img mat-card-img src="https://i.ibb.co/YNBZxNs/ieee-extreme.jpg" alt="Foto de curso analisis de datos" class="event-card-img ieeextreme-filter"/>
+                <p class="text-on-image cursoanalisis-text">{{ 'HOME.DATAANALYSIS.TITLE' | translate }}</p>
+              </div>
+              <mat-card-content class="mt-2">
+                <mat-card-title>{{ 'HOME.DATAANALYSIS.TITLE' | translate }}</mat-card-title>
+                <p class="lead">{{ 'HOME.DATAANALYSIS.TEXT' | translate }}</p>
+                <a class="link-text" [routerLink]="['/data-analysis']">
+                  <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+                    <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+                  </h5>
+                </a>
+              </mat-card-content>
+            </mat-card>
+          </a>
+
+        </div>
 
       </div>
-
-    </div>
 
     </div>
 
