curso data updated with button and solutions

--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -33,6 +33,18 @@
   </div>
 </div>
 
+<!-- !Uncomment to create the test button -->
+<!-- <br>
+<div>
+  <div class="d-flex flex-row-reverse">
+    <a href="#" target="_blank" class="button-text">
+      <button class="goback-button">
+        {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
+      </button>
+    </a>
+  </div>
+</div> -->
+
 <!-- Introductory text -->
 <div>
   <h2 class="course-subtitle">{{ 'DATAANALYSIS.DESC_TITLE' | translate }}</h2>
@@ -87,6 +99,33 @@
     </mat-card-content>
   </mat-card>
 
+</div>
+<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center">
+<!-- Solucionario 1 -->
+
+  <!-- <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+            fxFlex.lt-sm="100%">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>
+        {{'DATAANALYSIS.SOLUTION' | translate }}
+        1
+      </mat-card-title>
+    </mat-card-header>
+  </mat-card>
+ -->
+<!-- Solucionario 2 -->
+<!--
+  <mat-card class="example-card" fxFlex="0 1 calc(40% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+            fxFlex.lt-sm="100%">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>
+        {{'DATAANALYSIS.SOLUTION' | translate }}
+        2
+      </mat-card-title>
+    </mat-card-header>
+  </mat-card> -->
 </div>
 
 <div class="faq-section">
