Minor fix: modified sessions cookies in order to expire in 365 days

--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -79,7 +79,7 @@
 
                 <div class="d-inline-flex" style="margin-bottom:10px" *ngIf="emojisVisible">
                   <div class="mr-2" *ngFor="let emoji of emojisList; index as i">
-                    <ngx-emoji style="margin-right: 7px" [emoji]="{ id: emoji, skin: 3 }" size="40"
+                    <ngx-emoji style="margin-right: 7px; cursor:pointer" [emoji]="{ id: emoji, skin: 3 }" size="40"
                                (emojiClick)="rateNews(emoji, i)"></ngx-emoji>
                   </div>
                 </div>
