--- a/src/app/modules/events/pages/events/events.component.html
+++ b/src/app/modules/events/pages/events/events.component.html
@@ -85,7 +85,7 @@
           <a [routerLink]="['/error401']">
             <mat-card class="event-card">
               <div class="image-with-text">
-                <img mat-card-img src="https://i.ibb.co/q1QyW01/cursopython.jpg" alt="Foto de los cursos de Python" class="event-card-img cursopython-filter"/>
+                <img mat-card-img src="https://i.ibb.co/q1QyW01/cursopython.jpg" alt="Foto de los cursos de Python" class="event-card-img bitcup-filter"/>
                 <p class="text-on-image bitcup-text">{{ 'HOME.BITCUP.TITLE' | translate }}</p>
               </div>
               <mat-card-content class="mt-2">
@@ -106,7 +106,7 @@
           <a  [routerLink]="['/data-analysis']">
             <mat-card class="event-card">
               <div class="image-with-text">
-                <img mat-card-img src="https://i.ibb.co/YNBZxNs/ieee-extreme.jpg" alt="Foto de curso analisis de datos" class="event-card-img ieeextreme-filter"/>
+                <img mat-card-img src="https://i.ibb.co/YNBZxNs/ieee-extreme.jpg" alt="Foto de curso analisis de datos" class="event-card-img cursoanalisis-filter"/>
                 <p class="text-on-image cursoanalisis-text">{{ 'HOME.DATAANALYSIS.TITLE' | translate }}</p>
               </div>
               <mat-card-content class="mt-2">
