--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
@@ -1,1 +1,138 @@
-<p>bitcup works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IEEExtreme</title>
+</head>
+<header>
+  <app-navbar></app-navbar>
+</header>
+
+<body>
+
+    <!-- Inicio and facts -->
+    <div class="bottomLine" id="home">
+        <img src="../../../../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
+        <div class="container" id="facts">
+            <div class="row">
+              <div class="col-sm">
+                  <h1>11</h1>
+                  <h3 class="facts">{{ 'IEEEXTREME.FACTS.EDITIONS' | translate }}</h3>
+              </div>
+              <div class="dottedlineright"></div>
+              <div class="col-sm">
+                    <h1>54+</h1>
+                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.PARTICIPANTS' | translate }}</h3>
+              </div>
+              <div class="dottedlineright"></div>
+              <div class="col-sm">
+                    <h1>11</h1>
+                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.TOPTEAMS' | translate }}</h3>
+              </div>
+              <div class="dottedlineright"></div>
+              <div class="col-sm">
+                    <h1>24hs</h1>
+                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.HOURS' | translate }}</h3>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Resolve problemas en equipo -->
+    <div class="bottomLine">
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <h2>{{ 'IEEEXTREME.TEAM.TITLE' | translate }}</h2>
+                <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
+              </div>
+              <div class="col-sm">
+                <img src="../../../../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+              </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Queres participar -->
+    <div class="bottomLine" id="takepart">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="../../../../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+                </div>
+              <div class="col-sm">
+                <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
+                <div class="transparent">{{ 'IEEEXTREME.PARTICIPATE.TEXT' | translate }}</div>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Sponsors -->
+
+    <div class="bottomLine" id="sponsorship">
+      <h1>{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
+      <br>
+      <div class="sponsor">
+        <div class="row">
+          <div class="container">
+            <div class="row" style="margin-top: 2vmin;">
+                <div class="col-sm mt-5 mt-md-2">
+                    <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                         style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+                <div class="col-sm mt-5 mt-md-2">
+                    <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                         style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm mt-5 mt-md-4">
+                    <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
+                         style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+                <div class="col-sm mt-5 mt-md-4">
+                    <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+                         style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+                <div class="col-sm mt-5 mt-md-4">
+                    <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                         style="position: relative; top: 50%; transform: translateY(-50%); ">
+                </div>    
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Sponsor team -->
+    <div class="noLine" id="sponsorship">
+      <h1>Sponsorship 2021</h1>
+      <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
+        <div class="container">
+            <div class="row">
+
+              <div class="col-sm">
+                <div class="sponsorContact">
+                  <h3>Ricardo Lin</h3>
+                  <a href="mailto:xlin@itba.edu.ar" class="whiteLink">xlin@itba.edu.ar</a>
+                </div>
+              </div>
+              <div class="col-sm">
+                <div class="sponsorContact">
+                  <h3>Nicolas Bustelo</h3>
+                  <a href="mailto:nbustelo@itba.edu.ar" class="whiteLink">nbustelo@itba.edu.ar</a>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    
+
+</body>
+<app-footer></app-footer>
+</html>
