--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IEEExtreme</title>
+    <title>Bitcup</title>
 </head>
 <header>
   <app-navbar></app-navbar>
@@ -14,30 +14,7 @@
 
     <!-- Inicio and facts -->
     <div class="bottomLine" id="home">
-        <img src="../../../../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
-        <div class="container" id="facts">
-            <div class="row">
-              <div class="col-sm">
-                  <h1>11</h1>
-                  <h3 class="facts">{{ 'IEEEXTREME.FACTS.EDITIONS' | translate }}</h3>
-              </div>
-              <div class="dottedlineright"></div>
-              <div class="col-sm">
-                    <h1>54+</h1>
-                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.PARTICIPANTS' | translate }}</h3>
-              </div>
-              <div class="dottedlineright"></div>
-              <div class="col-sm">
-                    <h1>11</h1>
-                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.TOPTEAMS' | translate }}</h3>
-              </div>
-              <div class="dottedlineright"></div>
-              <div class="col-sm">
-                    <h1>24hs</h1>
-                    <h3 class="facts">{{ 'IEEEXTREME.FACTS.HOURS' | translate }}</h3>
-              </div>
-            </div>
-        </div>
+        <img src="../../../../../assets/image/logos/bitcup.png" class="extremeLogo" alt="Logo ITBA-IEEE">
     </div>
 
     <!-- Resolve problemas en equipo -->
@@ -45,8 +22,8 @@
         <div class="container">
             <div class="row">
               <div class="col-sm">
-                <h2>{{ 'IEEEXTREME.TEAM.TITLE' | translate }}</h2>
-                <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
+                <h2>{{ 'BITCUP.BITCUP-TITLE' | translate }}</h2>
+                <div class="transparent">{{ 'BITCUP.BITCUP-TEXT' | translate }}</div>
               </div>
               <div class="col-sm">
                 <img src="../../../../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
@@ -63,8 +40,8 @@
                     <img src="../../../../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
                 </div>
               <div class="col-sm">
-                <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
-                <div class="transparent">{{ 'IEEEXTREME.PARTICIPATE.TEXT' | translate }}</div>
+                <h2>{{ 'BITCUP.FORMAT' | translate }}</h2>
+                <div class="transparent">{{ 'BITCUP.FORMAT-TEXT' | translate }}</div>
               </div>
             </div>
         </div>
@@ -72,7 +49,7 @@
 
     <!-- Sponsors -->
 
-    <div class="bottomLine" id="sponsorship">
+    <div class="noLine" id="sponsorship">
       <h1>{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
       <br>
       <div class="sponsor">
@@ -106,31 +83,6 @@
         </div>
       </div>
     </div>
-
-
-    <!-- Sponsor team -->
-    <div class="noLine" id="sponsorship">
-      <h1>Sponsorship 2021</h1>
-      <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
-        <div class="container">
-            <div class="row">
-
-              <div class="col-sm">
-                <div class="sponsorContact">
-                  <h3>Ricardo Lin</h3>
-                  <a href="mailto:xlin@itba.edu.ar" class="whiteLink">xlin@itba.edu.ar</a>
-                </div>
-              </div>
-              <div class="col-sm">
-                <div class="sponsorContact">
-                  <h3>Nicolas Bustelo</h3>
-                  <a href="mailto:nbustelo@itba.edu.ar" class="whiteLink">nbustelo@itba.edu.ar</a>
-                </div>
-              </div>
-            </div>
-        </div>
-    </div>
-
     
 
 </body>
