--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
@@ -17,7 +17,7 @@
         <img src="../../../../../assets/image/logos/bitcup.png" class="extremeLogo" alt="Logo ITBA-IEEE">
     </div>
 
-    <!-- Resolve problemas en equipo -->
+    <!-- bitcup -->
     <div class="bottomLine">
         <div class="container">
             <div class="row">
@@ -26,18 +26,18 @@
                 <div class="transparent">{{ 'BITCUP.BITCUP-TEXT' | translate }}</div>
               </div>
               <div class="col-sm">
-                <img src="../../../../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+                <img src="../../../../../assets/image/logos/data.png" height="180vmin" alt="Logo ITBA-IEEE">
               </div>
             </div>
         </div>
     </div>
 
-    <!-- Queres participar -->
+    <!-- formato -->
     <div class="bottomLine" id="takepart">
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <img src="../../../../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+                    <img src="../../../../../assets/image/logos/competencia.png" height="200vmin" alt="Logo ITBA-IEEE">
                 </div>
               <div class="col-sm">
                 <h2>{{ 'BITCUP.FORMAT' | translate }}</h2>
@@ -46,6 +46,21 @@
             </div>
         </div>
     </div>
+
+    <!-- nivel -->
+    <div class="bottomLine">
+      <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <h2>{{ 'BITCUP.LEVEL' | translate }}</h2>
+              <div class="transparent">{{ 'BITCUP.LEVEL-TEXT' | translate }}</div>
+            </div>
+            <div class="col-sm">
+              <img src="../../../../../assets/image/logos/level.png" height="200vmin" alt="Logo ITBA-IEEE">
+            </div>
+          </div>
+      </div>
+  </div>
 
     <!-- Sponsors -->
 
