--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -60,30 +60,31 @@
   <p>{{ 'DATAANALYSIS.CONTENT_DESC' | translate }}</p>
 </div>
 
-<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center">
-
-  <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-            fxFlex.lt-sm="100%">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>
-        {{'DATAANALYSIS.CLASSES.TITLE' | translate }}
-        1
-      </mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <mat-list>
-        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M1' | translate }}</mat-list-item>
-        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M2' | translate }}</mat-list-item>
-        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M3' | translate }}</mat-list-item>
-      </mat-list>
-    </mat-card-content>
-  </mat-card>
+<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center"> 
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+  fxFlex.lt-sm="100%">
+  <mat-card class="example-card hover-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>
+          {{'DATAANALYSIS.CLASSES.TITLE' | translate }}
+          1
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-list>
+          <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M1' | translate }}</mat-list-item>
+          <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M2' | translate }}</mat-list-item>
+          <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M3' | translate }}</mat-list-item>
+        </mat-list>
+      </mat-card-content>
+    </mat-card>
+  </a>
 
   <mat-card class="example-card" fxFlex="0 1 calc(40% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
             fxFlex.lt-sm="100%">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
+      <div mat-card-avatar class="example-header-image">  </div>
       <mat-card-title>
         {{'DATAANALYSIS.CLASSES.TITLE' | translate }}
         2
@@ -98,9 +99,10 @@
       </mat-list>
     </mat-card-content>
   </mat-card>
+  
 
 </div>
-<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center">
+<!-- <div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center"> -->
 <!-- Solucionario 1 -->
 
   <!-- <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
@@ -126,7 +128,7 @@
       </mat-card-title>
     </mat-card-header>
   </mat-card> -->
-</div>
+<!-- </div> -->
 
 <div class="faq-section">
   <h2 class="course-subtitle">{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}</h2>
