Added bitcup link to its tab and fixed a minor bug

--- a/src/app/modules/events/pages/events/events.component.html
+++ b/src/app/modules/events/pages/events/events.component.html
@@ -82,7 +82,7 @@
 
         <div class="card-group-col">
           <!--Bitcup-->
-          <a [routerLink]="['/error401']">
+          <a [routerLink]="['/bitcup']">
             <mat-card class="event-card">
               <div class="image-with-text">
                 <img mat-card-img src="../../../../../assets/image/courses/bitcup-logo.jpeg" alt="Foto de los cursos de Python" class="event-card-img bitcup-filter"/>
