--- a/src/app/modules/events/pages/events/events.component.css
+++ b/src/app/modules/events/pages/events/events.component.css
@@ -81,6 +81,10 @@ body {
 }
 
 .ieeextreme-filter {
+    filter: sepia(100%) hue-rotate(190deg) saturate(0%) brightness(60%);
+    transition: all ease-in 125ms;
+}
+.ieeextreme-filter:hover {
     filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
 }
 .ieeextreme-text {
@@ -88,7 +92,12 @@ body {
 }
 
 .cursopython-filter {
+    filter: sepia(100%) hue-rotate(308deg) saturate(0%) brightness(60%);
+    transition: all ease-in 125ms;
+}
+.cursopython-filter:hover {
     filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(60%);
+
 }
 
 .cursopython-text{
@@ -96,15 +105,23 @@ body {
 }
 
 .cursoanalisis-filter {
-  filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
+  filter: sepia(100%) hue-rotate(190deg) saturate(0%) brightness(60%);
+  transition: all ease-in 125ms;
 }
+.cursoanalisis-filter:hover {
+    filter: sepia(100%) hue-rotate(190deg) saturate(500%) brightness(60%);
+  }
 
 .cursoanalisis-text{
     top: 10%;
 }
 
 .bitcup-filter {
-  filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(60%);
+    filter: sepia(100%) hue-rotate(308deg) saturate(0%) brightness(70%);
+    transition: all ease-in 125ms;
+}
+.bitcup-filter:hover {
+    filter: sepia(100%) hue-rotate(308deg) saturate(500%) brightness(70%);
 }
 
 .bitcup-text{
