solutions and new course added

--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -81,8 +81,9 @@
     </mat-card>
   </a>
 
-  <mat-card class="example-card" fxFlex="0 1 calc(40% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-            fxFlex.lt-sm="100%">
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_2_Analisis_de_Datos.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+  fxFlex.lt-sm="100%">
+  <mat-card class="example-card hover-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image">  </div>
       <mat-card-title>
@@ -99,14 +100,15 @@
       </mat-list>
     </mat-card-content>
   </mat-card>
+  </a>
   
 
 </div>
-<!-- <div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center"> -->
+<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center"> 
 <!-- Solucionario 1 -->
-
-  <!-- <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-            fxFlex.lt-sm="100%">
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_1.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+  fxFlex.lt-sm="100%">
+  <mat-card class="example-card hover-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>
@@ -115,20 +117,22 @@
       </mat-card-title>
     </mat-card-header>
   </mat-card>
- -->
+  </a>
+
 <!-- Solucionario 2 -->
-<!--
-  <mat-card class="example-card" fxFlex="0 1 calc(40% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-            fxFlex.lt-sm="100%">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>
-        {{'DATAANALYSIS.SOLUTION' | translate }}
-        2
-      </mat-card-title>
-    </mat-card-header>
-  </mat-card> -->
-<!-- </div> -->
+  <div fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+    fxFlex.lt-sm="100%">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>
+          {{'DATAANALYSIS.SOLUTION' | translate }}
+          2
+        </mat-card-title>
+      </mat-card-header>
+    </mat-card>
+  </div>
+</div>
 
 <div class="faq-section">
   <h2 class="course-subtitle">{{ 'DATAANALYSIS.FAQ.TITLE' | translate}}</h2>
