--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -115,14 +115,14 @@
         {{'DATAANALYSIS.SOLUTION' | translate }}
         1
       </mat-card-title>
-    </mat-card-header>
+    </mat-card-header>  
   </mat-card>
   </a>
 
 <!-- Solucionario 2 -->
-  <div fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-    fxFlex.lt-sm="100%">
-    <mat-card class="example-card">
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_2.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+fxFlex.lt-sm="100%">
+    <mat-card class="example-card hover-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>
@@ -131,7 +131,7 @@
         </mat-card-title>
       </mat-card-header>
     </mat-card>
-  </div>
+  </a>
 </div>
 
 <div class="faq-section">
