not available background card color added

--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
@@ -13,6 +13,10 @@ body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+.not-available-background-color{
+    background-color: lightgrey;
+}
+
 #icons {
     text-align: center;
     color: whitesmoke;
