--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -34,16 +34,16 @@
 </div>
 
 <!-- !Uncomment to create the test button -->
-<!-- <br>
+<br>
 <div>
   <div class="d-flex flex-row-reverse">
-    <a href="#" target="_blank" class="button-text">
+    <a href="https://forms.gle/CUU2Q8qdAHV7qhAj7" target="_blank" class="button-text">
       <button class="goback-button">
         {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
       </button>
     </a>
   </div>
-</div> -->
+</div>
 
 <!-- Introductory text -->
 <div>
