--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -37,7 +37,7 @@
 <br>
 <div>
   <div class="d-flex flex-row-reverse">
-    <a href="https://forms.gle/xWa629FdWH5Q58PYA" target="_blank" class="button-text">
+    <a href="https://forms.gle/zwRNwNo9TfpaAsYv6" target="_blank" class="button-text">
       <button class="goback-button">
         {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
       </button>
