button problem on team card when clicked solved

--- a/src/app/modules/team/components/team-card/team-card.component.html
+++ b/src/app/modules/team/components/team-card/team-card.component.html
@@ -18,9 +18,9 @@
                     <h5>{{ person.cargo | translate }}</h5>
             
                     <!-- Linkedin -->
-                    <a mdbWavesEffect class="cardIcon" href="{{person.linkedin}}"><i class="fab fa-linkedin"></i></a>
+                    <a class="cardIcon" href="{{person.linkedin}}"><i class="fab fa-linkedin"></i></a>
                     <!-- Mail -->
-                    <a mdbWavesEffect class="cardIcon" href="mailto:{{person.mail}}"><i class="fas fa-envelope"></i></a>
+                    <a class="cardIcon" href="mailto:{{person.mail}}"><i class="fas fa-envelope"></i></a>
                 </mdb-card-body>
             </ng-template>
         
