--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
@@ -333,3 +333,28 @@ mat-panel-title {
 .mat-list .mat-list-item {
   height: 50px; /* default is 72px */
 }
+
+
+.ieeecard-button {
+  font-weight: 600;
+  margin-top: 0.25rem;
+  border: solid rgb(23, 46, 148);
+  color: rgb(23, 46, 148) !important;
+  border-radius: 5px;
+  background-color: inherit;
+  border-width: 3px;
+  transition: all 175ms ease-in-out;
+}
+.ieeecard-button:hover {
+  box-shadow: 0 0 0px 3px rgba(0,0,0,0.2);
+  color: white !important;
+  background-color: #0d47a1;
+  border-color: white;
+}
+
+.ieeecard-button >.button-text {
+  color: rgb(23, 46, 148) !important;
+}
+.ieeecard-button:hover > .button-text{
+  color: white !important;
+}
