--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -60,9 +60,8 @@
   <p>{{ 'DATAANALYSIS.CONTENT_DESC' | translate }}</p>
 </div>
 
-<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center">
-  <div fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%" >
-  <mat-card class="example-card mat-elevation-z8">
+<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center stretch">
+  <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%" >
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>
@@ -77,16 +76,15 @@
           <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M3' | translate }}</mat-list-item>
         </mat-list>
       </mat-card-content>
+
       <mat-card-actions align="center">
         <a [href]="['https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb']" target="_blank">
           <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.CLASSES.BUTTON' | translate }}</button>
         </a>
       </mat-card-actions>
     </mat-card>
-  </div>
 
-  <div fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
-  <mat-card class="example-card mat-elevation-z8">
+  <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image">  </div>
       <mat-card-title>
@@ -108,15 +106,12 @@
       </a>
     </mat-card-actions>
   </mat-card>
-  </div>
 
 </div>
 
 <div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center">
 <!-- Solucionario 1 -->
-  <div  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-  fxFlex.lt-sm="100%">
-  <mat-card class="example-card mat-elevation-z8">
+  <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%" fxFill>
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>
@@ -130,12 +125,9 @@
       </a>
     </mat-card-actions>
   </mat-card>
-  </div>
 
 <!-- Solucionario 2 -->
-  <div fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-fxFlex.lt-sm="100%">
-    <mat-card class="example-card mat-elevation-z8">
+    <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>
@@ -149,7 +141,6 @@ fxFlex.lt-sm="100%">
         </a>
       </mat-card-actions>
     </mat-card>
-  </div>
 </div>
 
 <div class="faq-section">
