--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -25,7 +25,7 @@
 <div>
   <div class="d-flex flex-row-reverse">
     <!-- Button is inside <a> tag because it allows a greater hitmark -->
-    <a href="https://forms.gle/FhCAhcMRN6wvxH3NA" target="_blank" class="button-text">
+    <a href="https://forms.gle/HoKbXFNMDZGJmJtm9" target="_blank" class="button-text">
       <button class="goback-button">
         {{ 'DATAANALYSIS.ENROLLBUTTON' | translate }}
       </button>
@@ -37,7 +37,7 @@
 <br>
 <div>
   <div class="d-flex flex-row-reverse">
-    <a href="https://forms.gle/SHhy6eeTMhnh5YL36" target="_blank" class="button-text">
+    <a href="https://forms.gle/FhCAhcMRN6wvxH3NA" target="_blank" class="button-text">
       <button class="goback-button">
         {{ 'DATAANALYSIS.TESTBUTTON' | translate }}
       </button>
@@ -60,8 +60,10 @@
   <p>{{ 'DATAANALYSIS.CONTENT_DESC' | translate }}</p>
 </div>
 
-<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center stretch">
-  <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%" >
+<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center"> 
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+  fxFlex.lt-sm="100%">
+  <mat-card class="example-card hover-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>
@@ -76,15 +78,12 @@
           <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M3' | translate }}</mat-list-item>
         </mat-list>
       </mat-card-content>
-
-      <mat-card-actions align="center">
-        <a [href]="['https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_1_Analisis_de_Datos.ipynb']" target="_blank">
-          <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.CLASSES.BUTTON' | translate }}</button>
-        </a>
-      </mat-card-actions>
     </mat-card>
+  </a>
 
-  <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_2_Analisis_de_Datos.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+  fxFlex.lt-sm="100%">
+  <mat-card class="example-card hover-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image">  </div>
       <mat-card-title>
@@ -100,34 +99,30 @@
         <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M4' | translate }}</mat-list-item>
       </mat-list>
     </mat-card-content>
-    <mat-card-actions align="center">
-      <a [href]="['https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Clases/Clase_2_Analisis_de_Datos.ipynb']" target="_blank">
-        <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.CLASSES.BUTTON' | translate }}</button>
-      </a>
-    </mat-card-actions>
   </mat-card>
+  </a>
+  
 
 </div>
-
-<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center">
+<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center"> 
 <!-- Solucionario 1 -->
-  <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%" fxFill>
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_1.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+  fxFlex.lt-sm="100%">
+  <mat-card class="example-card hover-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>
         {{'DATAANALYSIS.SOLUTION' | translate }}
         1
       </mat-card-title>
-    </mat-card-header>
-    <mat-card-actions align="center">
-      <a [href]="['https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_1.ipynb']" target="_blank">
-        <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
-      </a>
-    </mat-card-actions>
+    </mat-card-header>  
   </mat-card>
+  </a>
 
 <!-- Solucionario 2 -->
-    <mat-card class="example-card mat-elevation-z8" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)" fxFlex.lt-sm="100%">
+  <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_2.ipynb"  fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+fxFlex.lt-sm="100%">
+    <mat-card class="example-card hover-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>
@@ -135,12 +130,8 @@
           2
         </mat-card-title>
       </mat-card-header>
-      <mat-card-actions align="center">
-        <a [href]="['https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Curso_Analisis_de_Datos_Solucionarios/Solucionario_Clase_2.ipynb']" target="_blank">
-          <button mat-raised-button class="ieeecard-button">{{ 'DATAANALYSIS.SOLUTIONBUTTON' | translate }}</button>
-        </a>
-      </mat-card-actions>
     </mat-card>
+  </a>
 </div>
 
 <div class="faq-section">
